# met-office-tester

./: Cargo.toml
src/: database.rs  lib.rs  logging.rs  main.rs
src/data_source/: file.rs  json.rs  mod.rs
testdata/: response.json
