[package]
name = "tempmonitor"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]

[lib]
name = "libtempmonitor"
path = "src/lib.rs"

[[bin]]
name = "tempmonitor"
path = "src/main.rs"

[dependencies]
hyper = "0.9.6"
rustc-serialize = "0.3.19"
chrono = "0.2.22"
sqlite = "0.21.2"
docopt = "0.6.80"
